tests/baselines/reference/alwaysStrictNoImplicitUseStrict.errors.txt
error TS5102: Option 'noImplicitUseStrict' has been removed. Please remove it from your configuration.
alwaysStrictNoImplicitUseStrict.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
alwaysStrictNoImplicitUseStrict.ts(3,13): error TS1100: Invalid use of 'arguments' in strict mode.


!!! error TS5102: Option 'noImplicitUseStrict' has been removed. Please remove it from your configuration.
==== alwaysStrictNoImplicitUseStrict.ts (2 errors) ====
    module M {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export function f() {
            var arguments = [];
                ~~~~~~~~~
!!! error TS1100: Invalid use of 'arguments' in strict mode.
        }
    }